[package]
name = "start-shooter"
version = "0.1.0"
authors = ["wbglaeser <ben.glaeser@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.3"
actix = "0.8.3"
futures = "0.1.28"
failure = "0.1.5"

[lib]
name = "lib"
path = "src/lib.rs"
