[package]
name = "start_shooter"
version = "0.1.0"
authors = ["wbglaeser <ben.glaeser@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.3"
actix = "0.8.3"
futures = "0.1.28"
failure = "0.1.5"
serde = "1.0.98"
serde_json = "1.0.40"
rand = "0.7.0"
itertools = "0.8.0"

